kubernetes/apps/network/nas-ingress/app/audiobookshelf-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  annotations:
    hajimari.io/icon: arcticons:audiobookshelf
spec:
  ingressClassName: internal
  rules:
    - host: &host audiobookshelf.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: audiobookshelf
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 13378
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
