kubernetes/apps/network/nas-ingress/app/duplicati-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicati
  annotations:
    hajimari.io/icon: arcticons:backup
spec:
  ingressClassName: internal
  rules:
    - host: &host duplicati.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: duplicati
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: duplicati
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 8200
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: duplicati
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
