kubernetes/apps/network/nas-ingress/app/minio-api.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
spec:
  ingressClassName: internal
  rules:
    - host: &host minio-api.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio-api
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-api
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 32769
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
