kubernetes/apps/network/nas-ingress/app/minio.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    hajimari.io/icon: simple-icons:minio
spec:
  ingressClassName: internal
  rules:
    - host: &host minio.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 32769
        protocol: TCP
      - name: http2
        port: 32768
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
