kubernetes/apps/network/nas-ingress/app/nas-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nas
spec:
  ingressClassName: internal
  annotations:
    hajimari.io/enable: true
    hajimari.io/appName: NAS
    hajimari.io/icon: mdi:nas
  rules:
    - host: &host nas.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nas
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 8080
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
