kubernetes/apps/network/nas-ingress/app/nasport-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nasport
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    hajimari.io/icon:simple-icons:portainer
spec:
  ingressClassName: internal
  rules:
    - host: &host nasport.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nasport
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nasport
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 19943
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nasport
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
