kubernetes/apps/network/nas-ingress/app/photoprism-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism
  annotations:
    hajimari.io/icon: simple-icons:prisma
spec:
  ingressClassName: internal
  rules:
    - host: &host photoprism.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: photoprism
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: photoprism
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 2342
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
