kubernetes/apps/network/nas-ingress/app/radarr-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    hajimari.io/icon: material-symbols:radar
spec:
  ingressClassName: internal
  rules:
    - host: &host radarr.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: radarr
                port:
                  number: 80
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: radarr
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 7878
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
